--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ typings/
 
 # ignore package-lock as it complicates merging
 package-lock.json
+
+# Build directories for Front-End Assets
+src/build/
